# bachelor

./: .gitignore  README.md  data_loader.py  environment.yaml  environment_cuda.yml  environment_dev.yml  eval-gold.py  eval.py  mypy.ini  pyproject.toml  run.py  setup.cfg  summary_statistics.py  train.py  utils.py
bachelor/: dataset.py  metrics.py  model.py  utils.py
data-exploration/: sentence_length.py  summary_statistics.ipynb
