[build-system]
requires = ['setuptools>=65.1', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "bachelor"
description = "Bachelor project"
version = '0.0.1'
requires-python = '>=3.12'
dependencies = []

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
  'black',
  'flake8',
  'flake8-bugbear',
  'flake8-pie',
  'flake8-simplify',
  'flake8-typing-imports',
  'isort',
  'mypy',
  'pip-tools',
  'pyupgrade',
]

[tool.isort]
profile = 'black'
force_single_line = 'true'

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
